# simple-perm-manager

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: test-coverage.yml
src/: lib.rs  main.rs
src/permission/: mod.rs  tests.rs
src/permission/action_serialization/: mod.rs  tests.rs
src/permission_manager/: mod.rs  tests.rs
tools/: Cargo.toml
